# lookup

./: .gitignore  CMakeLists.txt  LICENSE  README.md
convert/: CMakeLists.txt  convert.cpp  convert.h  csv.cpp  csv.h
data/: combined.json
data/2d/: data.csv  data.json
data/3d/: data.csv  data.json
data/4d/: data.csv  data.json
lookup/: detail.hpp  interpolate.hpp  json.cpp  json.h  lookup.hpp  traits.hpp  utility.hpp
